replace old noClickDelay with fastClick as the old function prevents scrolling operation on mobile device

--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -36,6 +36,8 @@ body {
     height:100%;
     margin:0px;
     padding:0px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
     -moz-transition: all .1s ease-in-out;
     -webkit-transition: all .1s ease-in-out;
     transition: all .1s ease-in-out;
